assets/css/style.scss
---
---

@import "{{ site.theme }}";

@media only screen and (min-width: 480px) {
  body {
    font-size: 18px;
  }
  
  h1 {
    font-size: 36px;
  }

  small {
    font-size: 17px;
  }
}

nav span.nav_year {
  white-space: nowrap;
}

/* Credit goes to Chris Coyier @ https://css-tricks.com/couple-takes-sticky-footer/ */

html, body, .wrapper {
  height: 100%;
}

.wrapper {
  display: flex;
  flex-direction: column;
}

section {
  flex: 1 0 auto;
}

footer {
  flex-shrink: 0;
  width: auto;
}

/* End of credit */

@media print {
  body {
      padding: 0 50px;
      margin: 0;
  }

  h1, h2, h3, h4, h5, h6, hr {
    page-break-after: avoid;
  }

  p, ul, ol, li {
    page-break-before: avoid;
    page-break-inside: avoid;
  }

  footer {
    display: none;
  }
}

// This was annoyingly making letters bigger,
// displacing them, so finally deactivating
a:hover, a:focus {
  text-decoration: none !important;
  font-weight: normal !important;
}

section {
  background-color: white;
  float: none;
  width: auto;
  border: 0px;
}

footer {
  position: relative;
  float: none;
  padding-top: 50px;
}

header {
  position: relative;
  float: none;
}

li ul, li p {
  margin: 0;
}

details {
  margin: 0 0 20px;
}

summary p {
  display: inline;
}

summary span {
  color: #267CB9;
  text-decoration: none;
  cursor: pointer;
}

summary span:hover, summary span:focus {
  color: #069;
  font-weight: bold;
}

/* Credit goes to connexo @ https://stackoverflow.com/a/55032002 */

details[open] summary ::after {
  content: attr(data-open);
}

details:not([open]) summary ::after {
  content: attr(data-close);
}

/* End of credit */

pre {
  white-space: pre-wrap;
}

.container {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
  height: 300px;
}

/* Then style the iframe to fit in the container div with full height and width */
.responsive-iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

